# MasterThesis

./: .gitignore  DepthCamera_2026-05-18-14-08-16.json  config.json  env.yml  pyproject.toml  sync_server.sh
data/: dehydrated_dataset_Momayyezi_et_al_2022.csv  devi_and_reddy_2018.csv  gm_dataset_Knauer_et_al_2022.csv  watered_dataset_Momayyezi_et_al_2022.csv
scripts/: datareader_Knauer2022.ipynb  datareader_Momayyezi2022.ipynb  pipes_formula.ipynb  solutions_inspection.ipynb  stomata_analysis.ipynb  surfacearea.py  to_dataframes.ipynb
scripts/data/: Knauer.ipynb  Momayyezi.ipynb  fidelity.ipynb  stomata.ipynb
scripts/data/derived/: Knauer_filtered.csv  Momayyezi_filtered.csv
scripts/data/raw/: liu_et_al_2018.json  luo_et_al_2023.csv
scripts/plots/: diffusion.ipynb  diffusion_old.ipynb  photoactive.ipynb  reaction.ipynb
src/mscthesis/: config.py  ids.py  log.py  manifest.py  paths.py
src/mscthesis/cli/: main.py
src/mscthesis/cli/commands/batch/: synthesize.py
src/mscthesis/cli/commands/pipes/: run.py  validate.py
src/mscthesis/cli/commands/sample/: mesh.py  scan.py  solve_active.py  solve_diffusion.py  synthesize_metaballs.py  synthesize_mixed.py  synthesize_uniform.py  triangulate.py
src/mscthesis/cli/commands/search/: analyze_geometry.py  (+22 more)
src/mscthesis/core/: diffusion.py  geo.py  io.py  photoactive.py  solvers.py  visualization.py
src/mscthesis/core/meshing/: breping.py  gmeshing.py  gmeshing_.py  triangulation.py
src/mscthesis/core/synthesis/: contrast.py  metaballs.py  mixed.py  uniform.py  utils.py
stored_solutions/07052026/: README.md  solutions.csv
stored_solutions/10052026/: README.md  diffusion_solutions.csv  diffusion_summary.csv
stored_solutions/17062026/: diffusion_solutions.csv
(+8 files in other folders)
